finish styling home

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
           <div class="span-2">
             <div class="bg"></div>
             <h1>Office of Owen Dodd</h1>
-            <h3>Colorado – New York – Copenhagen</h3>
-            <h1 class="contact first">(US) +1 303 819 0844</h1>
-            <h1 class="contact">(EU) +45 31 48 91 93</h1>
-            <h1 class="contact"><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h1>
+            <h3 class="collapser">Colorado – New York – Copenhagen</h3>
+            <h1 class="collapser contact first">(US) +1 303 819 0844</h1>
+            <h1 class="collapser contact">(EU) +45 31 48 91 93</h1>
+            <h1 class="collapser contact"><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h1>
           </div>
         </div>
       </header>
@@ -72,12 +72,61 @@
       </p>
     </section>
 
+    <section class="projects">
+    <div class="bg"></div>
+    <h1>Project and Links</h1>
+    <div class="link-block">
+      <a href="">
+        <div class="link-bg"></div>
+        <h1>Selected Work</h1>
+        <h2>(product)</h2>
+      </a>
+      <a href="">
+        <div class="link-bg"></div>
+        <h1>Artsy City Guide</h1>
+        <h2>(product)</h2>
+      </a>
+      <a href="">
+        <div class="link-bg"></div>
+        <h1>Palette Design System</h1>
+        <h2>(product)</h2>
+      </a>
+      <a href="">
+        <div class="link-bg"></div>
+        <h1>Surface Samples</h1>
+        <h2>(images)</h2>
+      </a>
+      <a href="">
+        <div class="link-bg"></div>
+        <h1>Keys in a Plastic Bag Hidden Behind the TV</h1>
+        <h2>(images)</h2>
+      </a>
+      <a href="">
+        <div class="link-bg"></div>
+        <h1>Jzuj</h1>
+        <h2>(food)</h2>
+      </a>
+      <a href="">
+        <div class="link-bg"></div>
+        <h1>Are.na</h1>
+        <h2>(www)</h2>
+      </a>
+      <a href="">
+        <div class="link-bg"></div>
+        <h1>Instagram</h1>
+        <h2>(www)</h2>
+      </a>
+      <a href="">
+        <div class="link-bg"></div>
+        <h1>Linkedin</h1>
+        <h2>(www)</h2>
+      </a>
+    </div>
+
+    </section>
+
     <section>
-      <h2>
-        <span class="date-right">Case-studies available upon request</span>
-        <a class="link" href="/assets/imgs/od_resume_2019.pdf">Resume</a>
-        <a class="link" href="mailto:mail@owendodd.com">mail@owendodd.com</a>
-      </h2>
+      <h1>Get in touch: <a href="mailto:mail@owendodd.com">mail@owendodd.com</a><br>Last updated: 10 Oct 2020</h1>
     </section>
 
     <script type="text/javascript" src="/assets/js/script.js"></script>
