add mobile styles

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section class="intro">
       <p>
-        I'm a product designer and photographer working on projects focused
+        I'm a designer and photographer working on projects focused
         around art, technology, food and publishing. Currently I'm working as a
         Senior Product Designer for
         <a href="https://cooking.nytimes.com/">NYT Cooking</a> and based in
