--- a/stage/index.html
+++ b/stage/index.html
@@ -8,7 +8,7 @@
     />
     <title>Owen Dodd</title>
     <link rel="icon" type="image/png" href="/assets/favicon.png" />
-    <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/home.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -129,6 +129,6 @@
       <h1>Get in touch: <a href="mailto:mail@owendodd.com">mail@owendodd.com</a><br>Last updated: 10 Oct 2020</h1>
     </section>
 
-    <script type="text/javascript" src="/assets/js/script.js"></script>
+    <script type="text/javascript" src="./assets/js/script.js"></script>
   </body>
 </html>
