--- a/stage/index.html
+++ b/stage/index.html
@@ -108,6 +108,11 @@
       </a>
       <a href="">
         <div class="link-bg"></div>
+        <h1>O.K. Jams</h1>
+        <h2>(food)</h2>
+      </a>
+      <a href="">
+        <div class="link-bg"></div>
         <h1>Are.na</h1>
         <h2>(www)</h2>
       </a>
