--- a/stage/index.html
+++ b/stage/index.html
@@ -8,7 +8,7 @@
     />
     <title>Owen Dodd</title>
     <link rel="icon" type="image/png" href="/assets/favicon.png" />
-    <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/home.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -33,7 +33,7 @@
           <div class="span-2">
             <div class="bg"></div>
             <h1>Office of Owen Dodd</h1>
-            <h1 class="collapser contact">Boulder, New York, Copenhagen</h1>
+            <h3 class="collapser">Boulder, CO – New York, NY – Copenhagen, DK</h3>
             <h1 class="collapser contact first">(US) +1 303 819 0844</h1>
             <h1 class="collapser contact">(EU) +45 31 48 91 93</h1>
             <h1 class="collapser contact"><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h1>
@@ -64,7 +64,7 @@
 
     <section>
       <p>
-        Additionally, I've founded a food and wine project called
+        Additionally, I make jams with <a href="">Kasia Sznajder</a> (girlfriend) as <a href="">O.K. Jams</a>, I've founded a food and wine project called
         <a href="https://jzujfood.com/">Jzuj Food</a>, which ran from 2018–2020
         as series of collaborative dinner events, and have published
         ecologically focused art books as a part of
@@ -108,6 +108,11 @@
       </a>
       <a href="">
         <div class="link-bg"></div>
+        <h1>O.K. Jams</h1>
+        <h2>(food)</h2>
+      </a>
+      <a href="">
+        <div class="link-bg"></div>
         <h1>Are.na</h1>
         <h2>(www)</h2>
       </a>
@@ -129,6 +134,6 @@
       <h1>Get in touch: <a href="mailto:mail@owendodd.com">mail@owendodd.com</a><br>Last updated: 10 Oct 2020</h1>
     </section>
 
-    <script type="text/javascript" src="/assets/js/script.js"></script>
+    <script type="text/javascript" src="./assets/js/script.js"></script>
   </body>
 </html>
