--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Owen Dodd</title>
     <link rel="icon" type="image/png" href="/assets/favicon.png" />
     <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -29,19 +30,18 @@
 
   <body>
       <header>
-        <div class="grid-4">
           <div class="span-2">
-            <div class="bg"></div>
-            <h1>Office of Owen Dodd</h1>
-            <h1 class="collapser contact">Boulder, New York, Copenhagen</h1>
-            <h1 class="collapser contact first">(US) +1 303 819 0844</h1>
-            <h1 class="collapser contact">(EU) +45 31 48 91 93</h1>
-            <h1 class="collapser contact"><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h1>
+            <h1><i>Office of</i> Owen Dodd</h1>
+            <h1 class="collapser contact">Copenhagen & New York</h3>
+            <h3 class="collapser contact first">(US) +1 303 819 0844</h3>
+            <h3 class="collapser contact">(EU) +45 31 48 91 93</h3>
+            <h3 class="collapser contact"><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h1>
           </div>
-        </div>
+          <!-- <div class="span-2">
+          </div> -->
       </header>
 
-    <section class="intro">
+    <section>
       <p>
         I'm a designer and photographer working on projects focused
         around art, technology, food and publishing. Currently I'm working as a
@@ -64,16 +64,14 @@
 
     <section>
       <p>
-        Additionally, I've founded a food and wine project called
-        <a href="https://jzujfood.com/">Jzuj Food</a>, which ran from 2018–2020
-        as series of collaborative dinner events, and have published
+        Additionally, I make fruit preserves with Kasia Sznajder at <a href="">O.K. Jams</a>. From 2018–2020 I ran a food and wine project called
+        <a href="https://jzujfood.com/">Jzuj Food</a> with Nicholas Sewitz. And I have also published
         ecologically focused art books as a part of
-        <a href="http://solar-power.press/">Solar Power Press</a>.
+        <a href="http://solar-power.press/">Solar Power Press</a>, along with Josef Bull and Amy Ontiveros.
       </p>
     </section>
 
     <section class="projects">
-    <div class="bg"></div>
     <h1>Project and Links</h1>
     <div class="link-block">
       <a href="">
