new link styling

--- a/index.html
+++ b/index.html
@@ -72,59 +72,65 @@
     </section>
 
     <section class="projects">
-    <h1>Project and Links</h1>
-    <div class="link-block">
-      <a href="">
-        <div class="link-bg"></div>
-        <h1>Selected Work</h1>
-        <h2>(product)</h2>
-      </a>
-      <a href="">
-        <div class="link-bg"></div>
-        <h1>Artsy City Guide</h1>
-        <h2>(product)</h2>
-      </a>
-      <a href="">
-        <div class="link-bg"></div>
-        <h1>Palette Design System</h1>
-        <h2>(product)</h2>
-      </a>
-      <a href="">
-        <div class="link-bg"></div>
-        <h1>Surface Samples</h1>
-        <h2>(images)</h2>
-      </a>
-      <a href="">
-        <div class="link-bg"></div>
-        <h1>Keys in a Plastic Bag Hidden Behind the TV</h1>
-        <h2>(images)</h2>
-      </a>
-      <a href="">
-        <div class="link-bg"></div>
-        <h1>Jzuj</h1>
-        <h2>(food)</h2>
-      </a>
-      <a href="">
-        <div class="link-bg"></div>
-        <h1>Are.na</h1>
-        <h2>(www)</h2>
-      </a>
-      <a href="">
-        <div class="link-bg"></div>
-        <h1>Instagram</h1>
-        <h2>(www)</h2>
-      </a>
-      <a href="">
-        <div class="link-bg"></div>
-        <h1>Linkedin</h1>
-        <h2>(www)</h2>
-      </a>
+    <div class="link-group">
+      <p class="label">Product design</p>
+      <div class="link-block">
+        <a href="">
+          <p>Selected Work</p>
+        </a>
+        <a href="">
+          <p>Artsy City Guide</p>
+        </a>
+        <a href="">
+          <p>Palette Design System</p>
+        </a>
+      </div>
     </div>
+
+    <div class="link-group">
+      <p class="label">Images</p>
+      <div class="link-block">
+        <a href="">
+          <p>Surface Samples</p>
+        </a>
+        <a href="">
+          <p>Keys in a Plastic Bag Hidden Behind the TV</p>
+        </a>
+      </div>
+    </div>
+
+    <div class="link-group">
+      <p class="label">Food</p>
+      <div class="link-block">
+        <a href="">
+          <p>Jzuj</p>
+        </a>
+        <a href="">
+          <p>O.K. Jams</p>
+        </a>
+      </div>
+    </div>
+
+    <div class="link-group">
+      <p class="label">Links</p>
+      <div class="link-block">
+        <a href="">
+          <p>Are.na</p>
+        </a>
+        <a href="">
+          <p>Instagram</p>
+        </a>
+        <a href="">
+          <p>Linkedin</p>
+        </a>
+      </div>
+    </div>
+
 
     </section>
 
     <section>
-      <h1>Get in touch: <a href="mailto:mail@owendodd.com">mail@owendodd.com</a><br>Last updated: 10 Oct 2020</h1>
+      <p>Get in touch: <a href="mailto:mail@owendodd.com">mail@owendodd.com</a><br>Last updated: 10 Oct 2020</p>
     </section>
 
     <script type="text/javascript" src="/assets/js/script.js"></script>
