--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <section>
       <p>
-        Additionally, I make fruit preserves with Kasia Sznajder at <a href="">O.K. Jams</a>. From 2018–2020 I ran a food and wine project called
+        Additionally, I make fruit preserves with Kasia Sznajder at <a href="https://okjams.com/">O.K. Jams</a>. From 2018–2020 I ran a food and wine project called
         <a href="https://jzujfood.com/">Jzuj Food</a> with Nicholas Sewitz. And I have also published
         ecologically focused art books as a part of
         <a href="http://solar-power.press/">Solar Power Press</a>, along with Josef Bull and Amy Ontiveros.
@@ -73,64 +73,30 @@
 
     <section class="projects">
     <div class="link-group">
-      <p class="label">Product design</p>
+      <h1 class="label">Projects and Links</h1>
+      <!-- <div class="link-block">
+        <p>
+          <a href="">Selected Work <span>(product)</span></a>
+          <a href="">Artsy City Guide <span>(product)</span></a>  
+          <a href="">Palette Design System <span>(product)</span></a>
+          <a href="">Surface Samples <span>(images)</span></a>
+          <a href="">Keys in a Plastic Bag Hidden Behind the TV <span>(images)</span></a>
+          <a href="">Jzuj <span>(food)</span></a>
+          <a href="">O.K. Jams <span>(food)</span></a> 
+        </p>
+      </div> -->
       <div class="link-block">
-        <a href="">
-          <p>Selected Work</p>
-        </a>
-        <a href="">
-          <p>Artsy City Guide</p>
-        </a>
-        <a href="">
-          <p>Palette Design System</p>
-        </a>
+        <p>
+          <a href="">Are.na <span>(www)</span></a>
+          <a href="">Instagram <span>(www)</span></a>
+          <a href="">Linkedin <span>(www)</span></a> 
+        </p>
       </div>
     </div>
-
-    <div class="link-group">
-      <p class="label">Images</p>
-      <div class="link-block">
-        <a href="">
-          <p>Surface Samples</p>
-        </a>
-        <a href="">
-          <p>Keys in a Plastic Bag Hidden Behind the TV</p>
-        </a>
-      </div>
-    </div>
-
-    <div class="link-group">
-      <p class="label">Food</p>
-      <div class="link-block">
-        <a href="">
-          <p>Jzuj</p>
-        </a>
-        <a href="">
-          <p>O.K. Jams</p>
-        </a>
-      </div>
-    </div>
-
-    <div class="link-group">
-      <p class="label">Links</p>
-      <div class="link-block">
-        <a href="">
-          <p>Are.na</p>
-        </a>
-        <a href="">
-          <p>Instagram</p>
-        </a>
-        <a href="">
-          <p>Linkedin</p>
-        </a>
-      </div>
-    </div>
-
-
     </section>
 
     <section>
-      <p>Get in touch: <a href="mailto:mail@owendodd.com">mail@owendodd.com</a><br>Last updated: 10 Oct 2020</p>
+      <p>Contact: <a href="mailto:mail@owendodd.com">mail@owendodd.com</a><br>Last updated: 10 Oct 2020</p>
     </section>
 
     <script type="text/javascript" src="/assets/js/script.js"></script>
