--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section class="projects">
     <div class="link-group">
       <h1 class="label">Projects and Links</h1>
-      <!-- <div class="link-block">
+      <div class="link-block">
         <p>
           <a href="">Selected Work <span>(product)</span></a>
           <a href="">Artsy City Guide <span>(product)</span></a>  
@@ -84,7 +84,7 @@
           <a href="">Jzuj <span>(food)</span></a>
           <a href="">O.K. Jams <span>(food)</span></a> 
         </p>
-      </div> -->
+      </div>
       <div class="link-block">
         <p>
           <a href="">Are.na <span>(www)</span></a>
@@ -96,7 +96,8 @@
     </section>
 
     <section>
-      <p>Contact: <a href="mailto:mail@owendodd.com">mail@owendodd.com</a><br>Last updated: 10 Oct 2020</p>
+      <p>© Owen Dodd 2020. Last updated: 10 October.</p>
+
     </section>
 
     <script type="text/javascript" src="/assets/js/script.js"></script>
