--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <a href="">Selected Work <span>(product)</span></a>
           <a href="">Artsy City Guide <span>(product)</span></a>  
           <a href="">Palette Design System <span>(product)</span></a>
-          <a href="">Surface Samples <span>(images)</span></a>
+          <a href="/surface-samples/">Surface Samples <span>(images)</span></a>
           <a href="">Keys in a Plastic Bag Hidden Behind the TV <span>(images)</span></a>
           <a href="">Jzuj <span>(food)</span></a>
           <a href="">O.K. Jams <span>(food)</span></a> 
