--- a/index.html
+++ b/index.html
@@ -30,28 +30,25 @@
 
   <body>
       <header>
-          <div class="span-2">
-            <h1><i>Office of</i> Owen Dodd</h1>
-            <h1 class="collapser contact">Copenhagen & New York</h3>
-            <h3 class="collapser contact first">(US) +1 303 819 0844</h3>
-            <h3 class="collapser contact">(EU) +45 31 48 91 93</h3>
-            <h3 class="collapser contact"><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h1>
+          <div class="pill nameplate">
+            <span class="menu icon open">
+              <div class="bar"></div>
+              <div class="bar"></div>
+            </span>
+            <h1>Office of Owen Dodd</h1>
           </div>
-          <!-- <div class="span-2">
-          </div> -->
+          <div class="pill page-header">
+            <h1>Information</h1>
+          </div>
       </header>
-
-    <section>
-      <p>
+      <section class="intro">
+       <p>
         I'm a designer and photographer working on projects focused
         around art, technology, food and publishing. Currently I'm working as a
         Senior Product Designer for
         <a href="https://cooking.nytimes.com/">NYT Cooking</a> and based in
         Copenhagen.
       </p>
-    </section>
-
-    <section>
       <p>
         Previously I've spent time developing design systems within
         <a href="https://www.nytimes.com/">The New York Times</a>, designing the
@@ -60,9 +57,6 @@
         including <a href="https://bergerfohr.com/">Berger & Föhr</a> and
         <a href="https://zutalorsinc.com/#home">Zut Alors!</a>.
       </p>
-    </section>
-
-    <section>
       <p>
         Additionally, I make fruit preserves with Kasia Sznajder at <a href="https://okjams.com/">O.K. Jams</a>. From 2018–2020 I ran a food and wine project called
         <a href="https://jzujfood.com/">Jzuj Food</a> with Nicholas Sewitz. And I have also published
@@ -71,7 +65,35 @@
       </p>
     </section>
 
-    <section class="projects">
+    <section class="info-block">
+      <div class="contact-block">
+        <div class="contact-row">
+          <h3 class="label">Europe</h3>
+          <h3>+45 31 48 98 93</h3>
+        </div>
+        <div class="contact-row">
+          <h3 class="label">America</h3>
+          <h3>+1 303 819 0844</h3>
+        </div>
+      </div>
+      <div class="contact-block">
+        <div class="contact-row">
+          <h3 class="label">Email</h3>
+          <h3><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h3>
+        </div>
+        <div class="contact-row">
+          <h3 class="label">Links</h3>
+          <h3>
+            <a href="">Instagram</a>
+            <a href="">Are.na</a>
+            <a href="">Linkedin</a>
+          </h3>
+        </div>
+      </div>
+
+    </section>
+
+    <!-- <section class="projects">
     <div class="link-group">
       <h1 class="label">Projects and Links</h1>
       <div class="link-block">
@@ -93,10 +115,10 @@
         </p>
       </div>
     </div>
-    </section>
+    </section> -->
 
     <section>
-      <p>© Owen Dodd 2020. Last updated: 10 October.</p>
+      <h3>© Owen Dodd 2020. Last updated: 10 October.</h3>
 
     </section>
 
