--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             <h1>Information</h1>
           </div>
       </header>
+
+      <div class="content">
       <section class="intro">
        <p>
         I'm a designer and photographer working on projects focused
@@ -66,6 +68,7 @@
     </section>
 
     <section class="info-block">
+      
       <div class="contact-block">
         <div class="contact-row">
           <h3 class="label">Europe</h3>
@@ -76,11 +79,12 @@
           <h3>+1 303 819 0844</h3>
         </div>
       </div>
+
       <div class="contact-block">
         <div class="contact-row">
           <h3 class="label">Email</h3>
           <h3><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h3>
-        </div>
+        </div> 
         <div class="contact-row">
           <h3 class="label">Links</h3>
           <h3>
@@ -88,39 +92,12 @@
             <a href="">Are.na</a>
             <a href="">Linkedin</a>
           </h3>
-        </div>
+        </div> 
       </div>
 
     </section>
 
-    <!-- <section class="projects">
-    <div class="link-group">
-      <h1 class="label">Projects and Links</h1>
-      <div class="link-block">
-        <p>
-          <a href="">Selected Work <span>(product)</span></a>
-          <a href="">Artsy City Guide <span>(product)</span></a>  
-          <a href="">Palette Design System <span>(product)</span></a>
-          <a href="/surface-samples/">Surface Samples <span>(images)</span></a>
-          <a href="">Keys in a Plastic Bag Hidden Behind the TV <span>(images)</span></a>
-          <a href="">Jzuj <span>(food)</span></a>
-          <a href="">O.K. Jams <span>(food)</span></a> 
-        </p>
-      </div>
-      <div class="link-block">
-        <p>
-          <a href="">Are.na <span>(www)</span></a>
-          <a href="">Instagram <span>(www)</span></a>
-          <a href="">Linkedin <span>(www)</span></a> 
-        </p>
-      </div>
-    </div>
-    </section> -->
-
-    <section>
-      <h3>© Owen Dodd 2020. Last updated: 10 October.</h3>
-
-    </section>
+  </div>
 
     <script type="text/javascript" src="/assets/js/script.js"></script>
   </body>
