last pause before clean slate

--- a/index.html
+++ b/index.html
@@ -31,11 +31,19 @@
   <body>
       <header>
           <div class="pill nameplate">
-            <span class="menu icon open">
+            <div class="title">
+            <span class="menu-icon open">
               <div class="bar"></div>
               <div class="bar"></div>
             </span>
             <h1>Office of Owen Dodd</h1>
+          </div>
+          <div class="menu">
+            <a href="">Information</a>
+            <a href="">Product Design</a>
+            <a href="">Photography</a>
+            <a href="">Other Projects</a>
+          </div>
           </div>
           <div class="pill page-header">
             <h1>Information</h1>
@@ -94,6 +102,7 @@
           </h3>
         </div> 
       </div>
+
 
     </section>
 
