--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <title>Owen Dodd</title>
     <link rel="icon" type="image/png" href="/assets/favicon.png" />
     <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -29,84 +32,88 @@
   </head>
 
   <body>
-      <header>
-          <div class="pill nameplate">
-            <div class="title">
-            <span class="menu-icon open">
-              <div class="bar"></div>
-              <div class="bar"></div>
-            </span>
-            <h1>Office of Owen Dodd</h1>
-          </div>
-          <div class="menu">
-            <a href="">Information</a>
-            <a href="">Product Design</a>
-            <a href="">Photography</a>
-            <a href="">Other Projects</a>
-          </div>
-          </div>
-          <div class="pill page-header">
-            <h1>Information</h1>
-          </div>
-      </header>
 
-      <div class="content">
+    <header>
+      <div class="menu-top">
+        <div class="menu-icon open">
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+        <div class="nameplate">
+          <h1>
+            Office of Owen Dodd</br>
+            Copenhagen & New York
+          </h1>
+        </div>
+      </div>
+        <div class="dropdown">
+          <a href="">Information</a>
+          <a href="">Product Design</a>
+          <a href="">Photography</a>
+          <a href="">Other Projects</a>
+        </div>
+      </div>
+    </header>
+
+    <div class="content">
+
       <section class="intro">
-       <p>
-        I'm a designer and photographer working on projects focused
-        around art, technology, food and publishing. Currently I'm working as a
-        Senior Product Designer for
-        <a href="https://cooking.nytimes.com/">NYT Cooking</a> and based in
-        Copenhagen.
-      </p>
-      <p>
-        Previously I've spent time developing design systems within
-        <a href="https://www.nytimes.com/">The New York Times</a>, designing the
-        editorial experience at <a href="https://www.artsy.net/">Artsy</a>, and
-        have done digital and print based projects at a number of design studios
-        including <a href="https://bergerfohr.com/">Berger & Föhr</a> and
-        <a href="https://zutalorsinc.com/#home">Zut Alors!</a>.
-      </p>
-      <p>
-        Additionally, I make fruit preserves with Kasia Sznajder at <a href="https://okjams.com/">O.K. Jams</a>. From 2018–2020 I ran a food and wine project called
-        <a href="https://jzujfood.com/">Jzuj Food</a> with Nicholas Sewitz. And I have also published
-        ecologically focused art books as a part of
-        <a href="http://solar-power.press/">Solar Power Press</a>, along with Josef Bull and Amy Ontiveros.
-      </p>
-    </section>
+        <p>
+          I'm a designer and photographer working on projects focused around
+          art, technology, food and publishing. Currently I'm working as a
+          Senior Product Designer for
+          <a href="https://cooking.nytimes.com/">NYT Cooking</a> and based in
+          Copenhagen.
+        </p>
+        <p>
+          Previously I've spent time developing design systems within
+          <a href="https://www.nytimes.com/">The New York Times</a>, designing
+          the editorial experience at
+          <a href="https://www.artsy.net/">Artsy</a>, and have done digital and
+          print based projects at a number of design studios including
+          <a href="https://bergerfohr.com/">Berger & Föhr</a> and
+          <a href="https://zutalorsinc.com/#home">Zut Alors!</a>.
+        </p>
+        <p>
+          Additionally, I make fruit preserves with Kasia Sznajder at
+          <a href="https://okjams.com/">O.K. Jams</a>. From 2018–2020 I ran a
+          food and wine project called
+          <a href="https://jzujfood.com/">Jzuj Food</a> with Nicholas Sewitz.
+          And I have also published ecologically focused art books as a part of
+          <a href="http://solar-power.press/">Solar Power Press</a>, along with
+          Josef Bull and Amy Ontiveros.
+        </p>
+      </section>
 
-    <section class="info-block">
+      <section class="info-block">
+        <div class="contact-block">
+          <div class="contact-row">
+            <h3 class="label">Europe</h3>
+            <h3>+45 31 48 98 93</h3>
+          </div>
+          <div class="contact-row">
+            <h3 class="label">America</h3>
+            <h3>+1 303 819 0844</h3>
+          </div>
+        </div>
+
+        <div class="contact-block">
+          <div class="contact-row">
+            <h3 class="label">Email</h3>
+            <h3><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h3>
+          </div>
+          <div class="contact-row">
+            <h3 class="label">Links</h3>
+            <h3>
+              <a href="">Instagram</a>
+              <a href="">Are.na</a>
+              <a href="">Linkedin</a>
+            </h3>
+          </div>
+        </div>
+      </section>
       
-      <div class="contact-block">
-        <div class="contact-row">
-          <h3 class="label">Europe</h3>
-          <h3>+45 31 48 98 93</h3>
-        </div>
-        <div class="contact-row">
-          <h3 class="label">America</h3>
-          <h3>+1 303 819 0844</h3>
-        </div>
-      </div>
-
-      <div class="contact-block">
-        <div class="contact-row">
-          <h3 class="label">Email</h3>
-          <h3><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h3>
-        </div> 
-        <div class="contact-row">
-          <h3 class="label">Links</h3>
-          <h3>
-            <a href="">Instagram</a>
-            <a href="">Are.na</a>
-            <a href="">Linkedin</a>
-          </h3>
-        </div> 
-      </div>
-
-
-    </section>
-
-  </div>
+    </div>
 
     <script type="text/javascript" src="/assets/js/script.js"></script>
   </body>
