contact block and menu

--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
     <header>
       <div class="menu-top">
         <div class="menu-icon open">
-          <div class="bar"></div>
-          <div class="bar"></div>
+          <div class="bar one"></div>
+          <div class="bar two"></div>
         </div>
         <div class="nameplate">
           <h1>
             Office of Owen Dodd</br>
             Copenhagen & New York
           </h1>
+        </div>
+        <div class="dropdown">
+          <a href="">Information</a>
         </div>
       </div>
         <div class="dropdown">
