--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <body>
 
     <header>
-      <div class="menu-top">
-        <div class="menu-icon open">
+      <div class="menu">
+        <div class="menu-icon">
           <div class="bar one"></div>
           <div class="bar two"></div>
         </div>
@@ -45,16 +45,10 @@
             Copenhagen & New York
           </h1>
         </div>
-        <div class="dropdown">
-          <a href="">Information</a>
-        </div>
-      </div>
-        <div class="dropdown">
-          <a href="">Information</a>
-          <a href="">Product Design</a>
-          <a href="">Photography</a>
-          <a href="">Other Projects</a>
-        </div>
+        <a class="menu-item info" href=""><h1>Information</h1></a>
+        <a class="menu-item info" href=""><h1>Product Design</h1></a>
+        <a class="menu-item info" href=""><h1>Photography</h1></a>
+        <a class="menu-item info" href=""><h1>Other Projects</h1></a>
       </div>
     </header>
 
