finalize, add case-studies

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
           <div class="bar one"></div>
           <div class="bar two"></div>
         </div>
-        <div class="nameplate">
+        <a href="/" class="nameplate">
           <h1>
             Office of Owen Dodd</br>
             Copenhagen & New York
           </h1>
-        </div>
-        <a class="menu-item info" href=""><h1>Information</h1></a>
-        <a class="menu-item info" href=""><h1>Product Design</h1></a>
-        <a class="menu-item info" href=""><h1>Photography</h1></a>
-        <a class="menu-item info" href=""><h1>Other Projects</h1></a>
+        </a>
+        <a class="menu-item info" href="/"><h1>Information</h1></a>
+        <a class="menu-item info" href="/pd"><h1>Product Design</h1></a>
+        <!-- <a class="menu-item info" href=""><h1>Photography</h1></a>
+        <a class="menu-item info" href=""><h1>Other Projects</h1></a> -->
       </div>
     </header>
 
@@ -59,51 +59,60 @@
           I'm a designer and photographer working on projects focused around
           art, technology, food and publishing. Currently I'm working as a
           Senior Product Designer for
-          <a href="https://cooking.nytimes.com/">NYT Cooking</a> and based in
+          <a href="https://cooking.nytimes.com/">NYT Cooking</a> and am based in
           Copenhagen.
         </p>
         <p>
           Previously I've spent time developing design systems within
           <a href="https://www.nytimes.com/">The New York Times</a>, designing
           the editorial experience at
-          <a href="https://www.artsy.net/">Artsy</a>, and have done digital and
-          print based projects at a number of design studios including
-          <a href="https://bergerfohr.com/">Berger & Föhr</a> and
-          <a href="https://zutalorsinc.com/#home">Zut Alors!</a>.
+          <a href="https://www.artsy.net/">Artsy</a>, and have worked in small, independent design studios doing a range or projects spanning identity, print and web design.
         </p>
+        <!-- <p>
+          Additional projects include: making fruit preserves with Kasia Sznajder at
+          <a href="https://okjams.com/">O.K. Jams</a>, pop-up food and wine projects as
+          <a href="https://jzujfood.com/">Jzuj Food</a>, and publishing ecologically focused art books as a part of
+          <a href="http://solar-power.press/">Solar Power Press</a>.
+        </p> -->
         <p>
-          Additionally, I make fruit preserves with Kasia Sznajder at
-          <a href="https://okjams.com/">O.K. Jams</a>. From 2018–2020 I ran a
-          food and wine project called
-          <a href="https://jzujfood.com/">Jzuj Food</a> with Nicholas Sewitz.
-          And I have also published ecologically focused art books as a part of
-          <a href="http://solar-power.press/">Solar Power Press</a>, along with
-          Josef Bull and Amy Ontiveros.
+          Feel free to <a href="mailto:mail@owendodd.com">get in touch</a> to discuss any potential web based projects, collaborations, or just to say hello. 
         </p>
       </section>
 
       <section class="info-block">
         <div class="contact-block">
           <div class="contact-row">
-            <h3 class="label">Europe</h3>
+            <h3 class="label">US</h3>
+            <h3>+1 303 819 0844</h3>
+          </div>
+          <div class="contact-row">
+            <h3 class="label">EU</h3>
             <h3>+45 31 48 98 93</h3>
           </div>
           <div class="contact-row">
-            <h3 class="label">America</h3>
-            <h3>+1 303 819 0844</h3>
+            <h3><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h3>
           </div>
         </div>
 
         <div class="contact-block">
           <div class="contact-row">
-            <h3 class="label">Email</h3>
-            <h3><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h3>
+            <h3><a href="https://www.instagram.com/owendodd/">instagram.com/owendodd</a></h3>
           </div>
           <div class="contact-row">
+            <h3><a href="https://www.are.na/owen-dodd/">are.na/owen-dodd</a></h3>
+          </div>
+          <div class="contact-row">
+            <h3><a href="https://www.linkedin.com/in/owen-dodd-402b8528/">linkedin.com/in/owen-dodd</a></h3>
+          </div>
+        </div>
+
+        <div class="contact-block">
+          <div class="contact-row">
             <h3>
-              <a href="">Instagram</a>
-              <a href="">Are.na</a>
-              <a href="">Linkedin</a>
+              Last updated 10 March, 2021.
+            </h3>
+          </div>
+        </div>
             </h3>
           </div>
         </div>
