--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
 
         <div class="contact-block">
           <div class="contact-row">
+          </div>
+          <div class="contact-row">
             <h3><a href="https://www.instagram.com/owendodd/">instagram.com/owendodd</a></h3>
           </div>
           <div class="contact-row">
