--- a/index.html
+++ b/index.html
@@ -102,19 +102,10 @@
             <h3><a href="https://www.are.na/owen-dodd/">are.na/owen-dodd</a></h3>
           </div>
           <div class="contact-row">
-            <h3><a href="https://www.linkedin.com/in/owen-dodd-402b8528/">linkedin.com/in/owen-dodd</a></h3>
+            <h3><a href="https://www.linkedin.com/in/owen-dodd-402b8528/">linkedin.com/in/ododd</a></h3>
           </div>
         </div>
 
-        <div class="contact-block">
-          <div class="contact-row">
-            <h3>
-              Last updated 10 March, 2021.
-            </h3>
-          </div>
-        </div>
-            </h3>
-          </div>
         </div>
       </section>
       
