--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <h3><a href="https://www.are.na/owen-dodd/">are.na/owen-dodd</a></h3>
           </div>
           <div class="contact-row">
-            <h3><a href="https://www.linkedin.com/in/owen-dodd-402b8528/">linkedin.com/in/ododd</a></h3>
+            <h3><a href="https://www.linkedin.com/in/ododd/">linkedin.com/in/ododd</a></h3>
           </div>
         </div>
 
