--- a/product-design/city-guide/index.html
+++ b/product-design/city-guide/index.html
@@ -40,7 +40,7 @@
             <a class="menu-item info" href="/">
                 <h1>Information</h1>
             </a>
-            <a class="menu-item info" href="/pd">
+            <a class="menu-item info" href="/product-design">
                 <h1>Product Design</h1>
             </a>
             <!-- <a class="menu-item info" href="">
