--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </h1>
         </a>
         <a class="menu-item info" href="/"><h1>Information</h1></a>
-        <a class="menu-item info" href="/pd"><h1>Product Design</h1></a>
+        <a class="menu-item info" href="/product-design"><h1>Product Design</h1></a>
         <!-- <a class="menu-item info" href=""><h1>Photography</h1></a>
         <a class="menu-item info" href=""><h1>Other Projects</h1></a> -->
       </div>
