--- a/index.html
+++ b/index.html
@@ -40,9 +40,13 @@
           <div class="bar two"></div>
         </div>
         <a href="/" class="nameplate">
-          <h1>
+          <h1 class="desktop">
             Office of Owen Dodd</br>
             Copenhagen & New York
+          </h1>
+          <h1 class="mobile">
+            Owen Dodd</br>
+            CPH, NYC
           </h1>
         </a>
         <a class="menu-item info" href="/"><h1>Information</h1></a>
