--- a/product-design/index.html
+++ b/product-design/index.html
@@ -95,7 +95,35 @@
             <h3>News feed, Artsy</h3>
         </section>
 
-
+        <section class="info-block">
+            <div class="contact-block">
+              <div class="contact-row">
+                <h3 class="label">US</h3>
+                <h3>+1 303 819 0844</h3>
+              </div>
+              <div class="contact-row">
+                <h3 class="label">EU</h3>
+                <h3>+45 31 48 98 93</h3>
+              </div>
+              <div class="contact-row">
+                <h3><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h3>
+              </div>
+            </div>
+    
+            <div class="contact-block">
+              <div class="contact-row">
+                <h3><a href="https://www.instagram.com/owendodd/">instagram.com/owendodd</a></h3>
+              </div>
+              <div class="contact-row">
+                <h3><a href="https://www.are.na/owen-dodd/">are.na/owen-dodd</a></h3>
+              </div>
+              <div class="contact-row">
+                <h3><a href="https://www.linkedin.com/in/ododd/">linkedin.com/in/ododd</a></h3>
+              </div>
+            </div>
+    
+            </div>
+          </section>
 
     </div>
 
