--- a/index.html
+++ b/index.html
@@ -60,17 +60,16 @@
 
       <section class="intro">
         <p>
-          I'm a designer and photographer working on projects focused around
-          art, technology, food and publishing. Currently I'm working as a
-          Senior Product Designer for
-          <a href="https://cooking.nytimes.com/">NYT Cooking</a> and am based in
-          Copenhagen.
+          I'm a strategic designer building systems, tools, and interfaces.
         </p>
+
+        <p>Currently I'm working on the content ecosystem at
+          <a href="https://cooking.nytimes.com/">NYT Cooking</a> and am living between Copenhagen and New York.</p>
         <p>
           Previously I've spent time developing design systems within
           <a href="https://www.nytimes.com/">The New York Times</a>, designing
           the editorial experience at
-          <a href="https://www.artsy.net/">Artsy</a>, and have worked in small, independent design studios doing a range or projects spanning identity, print and web design.
+          <a href="https://www.artsy.net/">Artsy</a>, as well as developing numerous independent projects spanning identity, print and web design.
         </p>
         <!-- <p>
           Additional projects include: making fruit preserves with Kasia Sznajder at
